; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c___round_jiffies_relative.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_timer.c___round_jiffies_relative.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@jiffies = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @__round_jiffies_relative(i64 %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i64, i64* @jiffies, align 8
  store i64 %6, i64* %5, align 8
  %7 = load i64, i64* %3, align 8
  %8 = load i64, i64* %5, align 8
  %9 = add i64 %7, %8
  %10 = load i32, i32* %4, align 4
  %11 = call i64 @round_jiffies_common(i64 %9, i32 %10, i32 0)
  %12 = load i64, i64* %5, align 8
  %13 = sub i64 %11, %12
  ret i64 %13
}

declare dso_local i64 @round_jiffies_common(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
